test/sources/fail/identifier.ys
{
    _x: int = 1;
}